--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,15 @@ li{
 .completed{
     text-decoration: line-through;
 }
+
+span{
+    font-size: 24px;
+    font-weight: 600;
+}
+
+i.fa-sharp.fa-solid.fa-xmark {
+    position: absolute;
+    right: 0;
+    margin-top: 4px;
+    margin-right: 150px;
+}
